# memelay

./: .editorconfig  .gitignore  Cargo.toml  Justfile  Makefile  moonlander.cfg  notes.md  test.cfg  test.layout  test.py
benches/: path.rs
cfg/: README.md  bigram_cmp  bigram_weights  curbest.layout  keyboard_layout_analyzer.json  layer0.cfg  layer0.seed  layer0_moddh.cfg  layer0_moddh.seed  layer1.cfg  layer1.seed  layer1_best.layout
ga/: Cargo.toml  notes.md
ga/benches/: examples.rs  ga.rs  knapsack.rs  target_string.rs
ga/benches/common/: measurement.rs  mod.rs  runner.rs
ga/src/: cfg.rs  distributions.rs  generation.rs  lib.rs  main.rs  niching.rs  runner.rs  util.rs
ga/src/examples/: ackley.rs  func.rs  griewank.rs  knapsack.rs  mod.rs  rastrigin.rs  target_string.rs
ga/src/hyper/: mod.rs
ga/src/operators/: crossover.rs  fitness.rs  initial.rs  mod.rs  mutation.rs  sampling.rs
ga/src/ops/: crossover.rs  distance.rs  fitness.rs  mod.rs  mutation.rs  sampling.rs  util.rs
grapher/: Cargo.toml
grapher/src/: lib.rs
grapher/src/stats/: sample.rs
scripts/: analysis.py  bigram_difficulty.py  combine_grams.py  common.py  conv.py  conv_klo.py  find_files.sh  generate_grams.py
src/: constants.rs  env.rs  eval.rs  fitness.rs  genome.rs  ingest.rs  layout.rs  layout_eval.rs  lib.rs  main.rs  model.rs  path.rs  prelude.rs  types.rs
src/ga/: generation.rs  mod.rs  runner.rs  util.rs
src/models/: count_map.rs  key_automata.rs  keyset.rs  layer.rs  layout.rs  mod.rs  qmk.rs  tests.rs  us.rs
tests/: evaluator_integration_test.rs  integration_test.rs  path.rs  workflow_integration_test.rs
