[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["genetic", "ga", "keyboard"]
description = "genetic algorithms for keyboard layouts"
edition = "2024"
license = "GPL-3.0"
name = "memelay"
readme = "README.md"
repository = "https://github.com/Edgeworth/memelay"
version = "0.1.0"

[dependencies]
ahash = "0.8.12"
approx = "0.5.1"
clap = {version = "4.5.47", features = ["derive", "unicode", "wrap_help"]}
color-eyre = "0.6.5"
derive_more = {version = "2.0.1", features = ["display", "deref", "deref_mut"]}
eyre = "0.6.12"
log = "0.4.28"
memega = {version = "0.1.0", git = "https://github.com/Edgeworth/memega"}
num_enum = "0.7.4"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
strum = {version = "0.25.0", features = ["derive"]}

[dev-dependencies]
criterion = {version = "0.7.0", features = ["real_blackbox"]}
pretty_assertions = "1.4.1"

[[bench]]
harness = false
name = "path"

# Build dependencies with optimisations - debug builds will run faster
# but dependencies don't change often.
[profile.dev.package."*"]
opt-level = 3
