[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
edition = "2018"
name = "ga"
version = "0.1.0"

[dependencies]
color-eyre = "*"
derive_more = "*"
eyre = "*"
log = "*"
num-traits = "*"
pretty_env_logger = "*"
rand = "*"
rand_distr = "*"
rayon = "*"
smallvec = "*"
# Pin to this version until criterion.rs updates.
serde = {version = "=1.0.118", features = ["derive"]}

[dev-dependencies]
criterion = {version = "*", features = ["real_blackbox"]}

[[bench]]
harness = false
name = "ga"
