[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
edition = "2018"
name = "ga"
version = "0.1.0"

[dependencies]
color-eyre = "*"
derive_more = "*"
eyre = "*"
grapher = {path = "../grapher"}
log = "*"
num-traits = "*"
pretty_env_logger = "*"
rand = "*"
rand_distr = "*"
rayon = "*"
serde = {version = "*", features = ["derive"]}
smallvec = "*"

[dev-dependencies]
criterion = {version = "*", features = ["real_blackbox"]}

[[bench]]
harness = false
name = "examples"
